<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/d_16"
        tools:context=".ui.main.MainActivity">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_16"
                android:layout_marginBottom="@dimen/d_16"
                android:padding="@dimen/d_8"
                app:cardBackgroundColor="#2b2b2b"
                app:cardCornerRadius="@dimen/d_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_8"
                    android:layout_marginBottom="@dimen/d_8"
                    android:orientation="horizontal"
                    android:padding="@dimen/d_8"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/rsrp"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/d_8"
                            app:cardBackgroundColor="#2b2b2b"
                            app:cardCornerRadius="@dimen/d_5">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                                <com.hosnydevtest.taskdigissquared.utils.GoalProgressBar
                                    android:id="@+id/progressbar1"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/d_40"
                                    app:barThickness="@dimen/d_40"
                                    app:unfilledSectionColor="#333333" />


                                <TextView
                                    android:id="@+id/txt1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:gravity="center_horizontal"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/d_8"
                        android:layout_marginRight="@dimen/d_8"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/rsrq"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/d_8"
                            app:cardBackgroundColor="#2b2b2b"
                            app:cardCornerRadius="@dimen/d_5">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                                <com.hosnydevtest.taskdigissquared.utils.GoalProgressBar
                                    android:id="@+id/progressbar2"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/d_40"
                                    app:barThickness="@dimen/d_40"
                                    app:unfilledSectionColor="#333333" />


                                <TextView
                                    android:id="@+id/txt2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:gravity="center_horizontal"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/sinr"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/d_8"
                            app:cardBackgroundColor="#2b2b2b"
                            app:cardCornerRadius="@dimen/d_5">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                                <com.hosnydevtest.taskdigissquared.utils.GoalProgressBar
                                    android:id="@+id/progressbar3"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/d_40"
                                    app:barThickness="@dimen/d_40"
                                    app:unfilledSectionColor="#333333" />


                                <TextView
                                    android:id="@+id/txt3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:gravity="center_horizontal"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/d_8"
                app:cardBackgroundColor="#F6F6F6"
                app:cardCornerRadius="@dimen/d_5">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F6F6F6" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/d_16"
                android:layout_marginBottom="@dimen/d_16"
                android:layout_weight="1"
                android:padding="@dimen/d_8"
                app:cardBackgroundColor="#F6F6F6"
                app:cardCornerRadius="@dimen/d_5">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F6F6F6" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/d_8"
                app:cardBackgroundColor="#F6F6F6"
                app:cardCornerRadius="@dimen/d_5">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F6F6F6" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_noInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                android:padding="@dimen/d_16"
                android:src="@drawable/no_internet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no_internet_connection"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/d_16"
                android:text="@string/check_your_connection_then_refresh" />

            <Button
                android:id="@+id/btn_try_internet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#6c63ff"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textColor="#fff" />

        </LinearLayout>

    </RelativeLayout>
</layout>